[tool.poetry]
name = "travels-site"
version = "0.1.0"
description = ""
authors = ["jshuckbot <gorka_ivan@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autopep8 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
